stop overflow of note history

--- a/piano-style.css
+++ b/piano-style.css
@@ -31,27 +31,34 @@ a:hover {
 .piano-keys { /* DONT CHANGE LAYOUT; IT TOOK YOU AGES TO FIX IT */
   display: flex;
   list-style: none;
-  margin-top: 40px;
 }
+
 .piano-keys .key {
   position: relative;
+}
+
+.piano-keys .key.diatonic{
+  box-shadow: 0 0 10px rgb(255, 230, 0);
+  text-decoration: green wavy underline;
 }
 
 .piano-keys .black { 
   z-index: 2;
   height: 140px;
-  width: 44px;
-  margin: 0 -22px 0 -22px;
+  width: 40px;
+  margin: 0 -20px 0 -20px;
   border-radius: 0 0 5px 5px;
   background-color:rgb(52, 52, 52) ;
 }
+
 .piano-keys .white {
-    height: 230px;
-    width: 70px;
-    border-radius: 8px;
-    border: 0.5px solid black;
-    background-color: white;
-  }
+  height: 230px;
+  width: 70px;
+  border-radius: 8px;
+  border: 0.5px solid black;
+  background-color: white;
+}
+
 .piano-keys .black.active {
   background-color:rgb(0, 0, 0) ;
 }
